--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express": "^4.17.1"
   },
   "devDependencies": {
-    "babel-preset-env": "^1.7.0"
+    "babel-preset-env": "^1.7.0",
+    "babel-register": "^6.26.0"
   }
 }
