--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/yingleiming/edu#readme",
   "dependencies": {
+    "blueimp-md5": "^2.12.0",
     "express": "^4.17.1",
     "formidable": "^1.2.1",
     "mongoose": "^5.7.13",
