--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
   "homepage": "https://github.com/yingleiming/edu#readme",
   "dependencies": {
     "blueimp-md5": "^2.12.0",
+    "connect-mongo": "^3.2.0",
     "express": "^4.17.1",
+    "express-session": "^1.17.0",
     "formidable": "^1.2.1",
     "mongoose": "^5.7.13",
     "nunjucks": "^3.2.0"
