--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon main.js",
+    "dev": "set PORT=8888 && nodemon main.js",
     "build": "babel src -d dist",
     "start": "node dist/app.js"
   },
@@ -29,6 +29,7 @@
     "nunjucks": "^3.2.0"
   },
   "devDependencies": {
+    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.7.0",
     "babel-register": "^6.26.0"
   }
